--- a/samples/amd.html
+++ b/samples/amd.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Piecemaker Samples</title>
+  <title>Piecemaker Samples : AMD</title>
 </head>
 <body>
   <div data-pieces="colorize" data-color="red">
@@ -16,12 +16,12 @@
   <script>
     require.config({
       paths: {
-        'Piecemaker': '../lib/piecemaker',
+        'piecemaker': '../lib/piecemaker',
         'mediator-js': '//raw.github.com/ajacksified/Mediator.js/master/mediator.min',
       }
     })
 
-    require(['Piecemaker', 'mediator-js'], function (Piecemaker, mediator) {
+    require(['piecemaker', 'mediator-js'], function (Piecemaker, mediator) {
 
       new Piecemaker({ mediator: mediator })
       mediator.publish('pieces:setup')
