Reorganize samples folders

--- a/samples/amd/index.html
+++ b/samples/amd/index.html
@@ -16,7 +16,7 @@
   <script>
     require.config({
       paths: {
-        'piecemaker': '../lib/piecemaker',
+        'piecemaker': '../../lib/piecemaker',
         'mediator-js': '//raw.github.com/ajacksified/Mediator.js/master/mediator.min',
       }
     })
