--- a/samples/global/index.html
+++ b/samples/global/index.html
@@ -19,11 +19,11 @@
     }
   </script>
 
-  <script src="../lib/piecemaker.js"></script>
+  <script src="../../lib/piecemaker.js"></script>
   <script src="//rawgithub.com/ajacksified/Mediator.js/master/mediator.min.js"></script>
 
-  <script src="global_pieces/colorize.js"></script>
-  <script src="global_pieces/smile.js"></script>
+  <script src="pieces/colorize.js"></script>
+  <script src="pieces/smile.js"></script>
 
   <script>
     var mediator = new Mediator()
