Add AMD almond samples

--- a/samples/amd/index.html
+++ b/samples/amd/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Piecemaker Sample : AMD</title>
+  <title>Piecemaker Samples: AMD</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>Piecemaker Sample</h1>
+  <h1>Piecemaker Samples</h1>
   <h2>AMD</h2>
   <div class="container" data-pieces="colorize" data-color="#903D3D">
     Colorize
