--- a/samples/backbone/index.html
+++ b/samples/backbone/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Piecemaker Sample : Backbone</title>
+  <title>Piecemaker Samples: Backbone</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>Piecemaker Sample</h1>
+  <h1>Piecemaker Samples</h1>
   <h2>Backbone</h2>
   <ul class="tasks" data-pieces="todo"></ul>
 
