--- a/samples/index.html
+++ b/samples/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Piecemaker Sample</h1>
+  <h1>Piecemaker Samples</h1>
   <nav>
     <ul>
       <li><a href="amd/">AMD</a></li>
+      <li><a href="amd_with_almond/">AMD with Almond</a></li>
       <li><a href="backbone/">Backbone</a></li>
       <li><a href="namespace/">Namespace</a></li>
     </ul>
