--- a/samples/amd_with_almond/index.html
+++ b/samples/amd_with_almond/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Piecemaker Samples: AMD Optimizer</title>
+  <title>Piecemaker Samples: AMD with Almond</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <h1>Piecemaker Samples</h1>
-  <h2>AMD Optimizer</h2>
+  <h2>AMD with Almond</h2>
   <div class="container" data-pieces="colorize" data-color="#903D3D">
     Colorize
   </div>
