--- a/samples/index.html
+++ b/samples/index.html
@@ -9,11 +9,15 @@
   <h1>Piecemaker Samples</h1>
   <nav>
     <ul>
+      <li><a href="namespace/">Namespace</a></li>
+      <li><a href="namespace_reload/">Namespace and reload</a></li>
       <li><a href="amd/">AMD</a></li>
+      <li><a href="amd_with_mediator/">AMD with mediator</a></li>
+      <li><a href="amd_with_mediator_reload/">AMD with mediator and reload</a></li>
       <li><a href="amd_with_almond/">AMD with Almond</a></li>
       <li><a href="backbone/">Backbone</a></li>
-      <li><a href="namespace/">Namespace</a></li>
     </ul>
   </nav>
+
 </body>
 </html>
