Add github fork me ribbon

--- a/samples/index.html
+++ b/samples/index.html
@@ -18,6 +18,6 @@
       <li><a href="backbone/">Backbone</a></li>
     </ul>
   </nav>
-
+  <a class="fork-me" href="http://github.com/jcemer/piecemaker" target="_blank">Fork me on GitHub</a>
 </body>
 </html>
