--- a/samples/namespace/index.html
+++ b/samples/namespace/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Piecemaker Samples</h1>
   <h2>Namespace</h2>
+  <a class="fork-me" href="http://github.com/jcemer/piecemaker" target="_blank">Fork me on GitHub</a>
   <div class="container" data-pieces="colorize" data-color="#903D3D">
     Colorize
   </div>
