--- a/samples/backbone/index.html
+++ b/samples/backbone/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Piecemaker Samples</h1>
   <h2>Backbone</h2>
+  <a class="fork-me" href="http://github.com/jcemer/piecemaker" target="_blank">Fork me on GitHub</a>
   <ul class="tasks" data-pieces="todo"></ul>
 
   <script src="http://requirejs.org/docs/release/2.1.8/minified/require.js"></script>
